# tdsa

./: .clang-format  .clang-tidy  .cmake-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  format  lint
.github/workflows/: build_and_test.yml  cmake_format.yml  yaml_format.yml
include/: thin.hpp
include/algo/: fproto_blackbox.hpp  fproto_predicate.hpp  fproto_score.hpp  max.hpp  min.hpp  size.hpp  strlen.hpp
include/tdsa/macro/: concat.hpp  concatenate.hpp  scope_exit.hpp  str.hpp  unique.hpp  unused.hpp  vkhandle.hpp  vkretfail.hpp
include/thin/: array.hpp  castr.hpp  cvstr.hpp  cvstrar.hpp  default_size_t.hpp  defaults.hpp  ra.hpp  revit.hpp  scope_guard.hpp  steap.hpp  strar.hpp  ver3.hpp  view.hpp
tests/: CMakeLists.txt  amalgamated.cpp  array.cpp  castr.cpp  cvstr.cpp  revit.cpp  strar.cpp  test.hpp  view.cpp
tests/algo/: CMakeLists.txt  max.cpp  min.cpp  size.cpp  strlen.cpp
tests/thin/: CMakeLists.txt  array.cpp  castr.cpp  cvstr.cpp  cvstrar.cpp  ra.cpp  revit.cpp  scope_guard.cpp  steap.cpp  strar.cpp  ver3.cpp  view.cpp
