FILE(GLOB_RECURSE TESTS CONFIGURE_DEPENDS "*.cpp")

FOREACH(TEST_FILE ${TESTS})
  FILE(RELATIVE_PATH TEST_FILE_REL ${CMAKE_SOURCE_DIR}/tests/algo ${TEST_FILE})
  STRING(REPLACE ".cpp" "" TEST_NAME ${TEST_FILE_REL})
  ADD_EXECUTABLE(${TEST_NAME} ${TEST_FILE})
  TARGET_LINK_LIBRARIES(${TEST_NAME} tdsa)
  ADD_TEST("[algo]${TEST_NAME}" ${TEST_NAME})
ENDFOREACH()
